add github and google authentication